objects/OLCN_OutboundCalls__c.object
<CustomObject>
    <description>This object will capture feedback received from injured person when a CAS team member calls the injured person. OLCN_</description>
    <fields>
        <fullName>OLCN_Answer11__c</fullName>
        <label>Answer 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Declined to answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OLCN_Answer12__c</fullName>
        <label>Answer 2</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OLCN_Answer13__c</fullName>
        <label>Answer 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Declined to answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OLCN_Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Notification FollowUps</relationshipLabel>
        <relationshipName>Feedback_OLCN</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OLCN_CompletedBy__c</fullName>
        <description>CAS team member who completes the Notification Follow-up.</description>
        <label>Completed By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLCN_CompletedDate__c</fullName>
        <description>Completed date of Notification-Follow-Up.</description>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OLCN_InjuredPersonEmail__c</fullName>
        <label>Injured Person Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OLCN_NoOfDaysTaken__c</fullName>
        <description>This field is used in Reports to Calculate the Number of days taken to complete the Notification-Follow-Up.</description>
        <formula>OLCN_CompletedDate__c  -   DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NoOfDays Taken To complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OLCN_Notes__c</fullName>
        <inlineHelpText>Additional notes and commentary on the feedback</inlineHelpText>
        <label>Notes</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OLCN_Question11__c</fullName>
        <defaultValue>&quot;Has dealing with the insurer been easy?&quot;</defaultValue>
        <label>Question 1</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OLCN_Question12__c</fullName>
        <defaultValue>&quot;Why do you feel that way?&quot;</defaultValue>
        <label>Question 2</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OLCN_Question13__c</fullName>
        <defaultValue>&quot;Is the insurer keeping you informed about the claims process?&quot;</defaultValue>
        <label>Question 3</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OLCN_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call back</fullName>
                </value>
                <value>
                    <fullName>No issues identified</fullName>
                </value>
                <value>
                    <fullName>All issues resolved</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Further Assistance</fullName>
                </value>
                <value>
                    <fullName>Unable to Contact</fullName>
                </value>
                <value>
                    <fullName>Declined to Answer</fullName>
                </value>
                <value>
                    <fullName>Already provided</fullName>
                </value>
                <value>
                    <fullName>Follow Up Completed</fullName>
                    <isActive>false</isActive>
                    <label>Follow Up Completed</label>
                </value>
                <value>
                    <fullName>Unable to Follow Up</fullName>
                    <isActive>false</isActive>
                    <label>Unable to Follow Up</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Notification Follow-up</label>
    <listViews>
        <fullName>My_Team_Outbound_Call_list_view_Open</fullName>
        <columns>OBJECT_ID</columns>
        <columns>OLCN_Case__c</columns>
        <columns>OLCN_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OLCN_Status__c</field>
            <operation>equals</operation>
            <value>Call back</value>
        </filters>
        <label>My Team Outbound Call list view (Open)</label>
        <sharedTo>
            <role>CAS_Manager</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>NFU{000000}</displayFormat>
        <label>NFU ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Follow-ups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>